# pixels-pygame-palace

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .replit  .replit-tasks.json  ARCHITECTURE.md  DEPLOYMENT_SUMMARY.md  Dockerfile.express  MODERNIZATION_SUMMARY.md  PRODUCTION_STATUS.md  README.md  TESTING_GUIDE.md  docker-compose.production.yml  docker-compose.yml  justfile  package-lock.json  package.json  playtest-analysis.md  playtest-puzzle.md  playtest-rpg.md  playtest-space.md  playwright.config.ts  pyproject.toml  renovate.json  replit.md  replit.nix  run-playwright-tests.sh  run-tests.js  run-tests.sh  run_all_tests.py  run_flask_backend.py  tailwind.config.ts  test_all_game_types.py  test_asset_conversion_caching.py  test_cache_atomicity.py  test_results.json  test_status_report.md  (+4 more)
.cursor/: .dockerignore  Dockerfile  README.md  environment.json
.github/workflows/: ci.yml  deploy.yml  npm-tasks.yml
apps/backend/: README_SECURITY.md  app.py  auth.py  cache_manager.py  compiler_orchestrator.py  config.py  entrypoint.sh  game_manager.py  package.json  pyproject.toml  security_config.py  startup_checks.py  test_compilation.py  web_game_server.py
apps/backend/ecs_runtime/: code_generator.py
apps/backend/ecs_runtime/core/: entity.py
apps/backend/ecs_runtime/systems/: input_system.py  ui_system.py
apps/backend/tests/: test_cache_metrics_and_performance.py
apps/frontend/: index.html  main.tsx  package.json  tsconfig.json  vite.config.ts
apps/server/: index.ts  package.json  tsconfig.json
assets/: README.md  generate_sounds.py
assets/audio/: catalog-audio.json
assets/pixel/: pixel_sprites.json
attached_assets/: Pasted--Assets-Name-Description--1758311341636_1758311341637.txt  Pasted-I-see-the-problem-overall-This-is-being-left-WAY-too-open-ended-Which-is-also-why-the-flow-on-the--1758308701376_1758308701377.txt
attached_assets/pixel/: create_sprite_sheet.py
backend/: .env.example  Dockerfile.flask  Dockerfile.game-executor  README.md  README_SECURITY.md  __init__.py  app.py  build_docker.sh  config.py  entrypoint.sh  game_engine.py  pyproject.toml  requirements.txt  security_config.py  shared_config_generator.py  start.sh  test_compilation.py  test_end_to_end.py  test_production_readiness.py  test_security.py  websocket_handlers.py
backend/ecs_runtime/: __init__.py
backend/ecs_runtime/systems/: scene_manager.py
backend/src/: app.py  config.py  game_manager.py  routes.py  web_game_compiler.py  websocket_handlers.py
backend/tests/: test_cache_atomicity.py  test_cache_comprehensive.py  test_smoke_compilation.py  test_web_compiler_reproducibility.py
client/: index.html
client/public/: adventure-flow.json  dungeon-flow.json  game-wizard-flow.json  platformer-flow.json  puzzle-flow.json  racing-flow.json  rpg-flow.json  space-flow.json  wizard-flow.json
client/src/: App.tsx  index.css  main.tsx  test-input.py
coverage-backend/: coverage-final.json  index.html  lcov.info
coverage-backend/lcov-report/: index.html
coverage-backend/server/: index.html  index.ts.html  routes.ts.html  storage.ts.html
coverage-backend/shared/: index.html  schema.ts.html  storage-client.ts.html
docker/: README.md
docker/postgres/: init.sql
docs/: performance_test_report.md  playtest-dungeon.md  playtest-platformer.md  playtest-racing.md  replit.md  test_results.txt  test_results_summary.md
playwright-report/: index.html
public/: game-wizard-flow.json  platformer-flow.json
scripts/: asset-catalog-summary.json  bootstrap_env.sh  catalog-kenney-assets.py  run-npm-task.sh
server/: db.ts  index.ts  migrate.ts  routes.ts  storage.ts
shared/: config.json  config.py  config.ts  db-schema.ts  registry-schemas.ts  schema.ts  storage-client.ts
shared/schemas/: asset.schema.json  buildTarget.schema.json  component.schema.json  mechanic.schema.json  (+1 more)
test/: test_racing_export.py
test-results/: .last-run.json
tests/: mobile-layout-integration.js  responsive-wizard.test.tsx  setup.ts  test-utils.ts
(+347 files in other folders)
