[project]
name = "pygame-palace-backend"
version = "0.1.0"
description = "Flask backend for Pixel's PyGame Palace"
requires-python = ">=3.13"

dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0", 
    "flask-socketio==5.3.4",
    "flask-limiter==3.5.0",
    "pygame==2.5.2",
    "pillow==10.1.0",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
    "python-engineio==4.8.0",
    "python-socketio==5.10.0",
    "numpy==1.24.3",
    "docker==7.0.0",
    "psutil==5.9.8",
    "pyjwt==2.8.0",
    "requests==2.31.0",
    "gunicorn==21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]